Add Alucard Governor

--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -26,6 +26,7 @@ CONFIG_S3C2410_WATCHDOG=Y
 CONFIG_IPV6=Y
 CONFIG_CRYPTO_AEAD=Y
 CONFIG_OF_PCI=Y
+CONFIG_CPU_FREQ_GOV_ALUCARD=Y
 CONFIG_NF_NAT_PROTO_GRE=Y
 CONFIG_IP6_NF_TARGET_REJECT=Y
 CONFIG_CPUFREQ_DT=Y
