--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -124,6 +124,11 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactive' governor for latency-sensitive workloads.
 
+config CPU_FREQ_DEFAULT_GOV_ALUCARD
+ 	bool "alucard"
+ 	select CPU_FREQ_GOV_ALUCARD
+ 	help
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -228,6 +233,10 @@ config CPU_FREQ_GOV_CONSERVATIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_ALUCARD
+ 	tristate "'alucard' cpufreq governor"
+ 	depends on CPU_FREQ
 
 config CPU_FREQ_GOV_KTOONSERVATIVE
 	tristate "'ktoonservative' cpufreq governor"
