Add Intellimm but it's buggy...

--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1323,6 +1323,7 @@ CONFIG_TEXTSEARCH=y
 CONFIG_WLAN_REGION_CODE=100
 CONFIG_USB_DWC3=y
 CONFIG_BATTERY_SWELLING=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_USB_SUPPORT=y
 CONFIG_CPU_IDLE_STOP_IDLE_DURING_HOTPLUG=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
