--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -475,6 +475,7 @@ CONFIG_CRYPTO_GHASH=Y
 CONFIG_NF_NAT_FTP=Y
 CONFIG_NF_CT_PROTO_UDPLITE=Y
 CONFIG_USB_DWC3=Y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=Y
 CONFIG_HID_UCLOGIC=Y
 CONFIG_BLK_DEV_RAM=Y
 CONFIG_NETFILTER_XT_MATCH_STATE=Y
