--- a/.config
+++ b/.config
@@ -1835,6 +1835,9 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 # CONFIG_TOUCHSCREEN_MXT540E is not set
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_DSX is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_DSX2 is not set
 # CONFIG_TOUCHSCREEN_FTS is not set
