--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -313,6 +313,7 @@ CONFIG_NLS=y
 CONFIG_MFD_ARIZONA=y
 CONFIG_EXYRNG_FAIL_POLICY_RESET=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_HID_MAGICMOUSE=y
 CONFIG_I2C_GPIO=y
@@ -774,6 +775,7 @@ CONFIG_SND_PCM=y
 CONFIG_PM_RUNTIME=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_HAVE_NET_DSA=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
 CONFIG_NET=y
 CONFIG_INPUT_EVDEV=y
@@ -1463,6 +1465,7 @@ CONFIG_NF_NAT_MASQUERADE_IPV6=y
 CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC_VALUE=1
 CONFIG_NETFILTER_XT_MATCH_HL=y
 CONFIG_CRYPTO_ALGAPI2=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_DLP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
