--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -110,6 +110,7 @@ CONFIG_SCSI_UFSHCD_PLATFORM=Y
 CONFIG_SND_DMAENGINE_PCM=Y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=Y
 CONFIG_NLS=Y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=Y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=Y
 CONFIG_HID_MAGICMOUSE=Y
 CONFIG_I2C_GPIO=Y
@@ -280,6 +281,7 @@ CONFIG_NET_SCH_PRIO=Y
 CONFIG_SND_SOC_DUMMY_CODEC=Y
 CONFIG_CRYPTO_LZO=Y
 CONFIG_SND_PCM=Y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=Y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=Y
 CONFIG_INPUT_EVDEV=Y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=Y
