--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -219,6 +219,7 @@ CONFIG_UNIX=Y
 CONFIG_USB_NET_DRIVERS=Y
 CONFIG_CRYPTO_HASH2=Y
 CONFIG_REGULATOR_MAX77854=Y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=Y
 CONFIG_USB_NET_SMSC95XX=Y
 CONFIG_INET_ESP=Y
 CONFIG_NF_CONNTRACK_IPV6=Y
